# edp-tool

./: .gitignore  LICENSE  README.md  edp_tool.py  example_iris.ipynb  pdp_tool.py  pyproject.toml  requirements.txt
tests/: test_edp_tool.py
